--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "passport-local": "~0.1.6",
     "passport-twitter": "latest",
     "composable-middleware": "^0.3.0",
-    "connect-mongo": "^0.8.1"
+    "connect-mongo": "^0.8.1",
+    "yelp": "^0.2.0"
   },
   "devDependencies": {
     "connect-livereload": "~0.4.0",
